# quickpaver

./: .codacy.yml  .codespellrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  tox.ini
.github/workflows/: main.yml
docs/: Makefile  make.bat
docs/sources/: api_reference.rst  conf.py  index.rst  installation.rst  usage.rst
docs/sources/_templates/autosummary/: class.rst
docs/sources/notebooks/: paving_examples.nblink
notebooks/: paving_examples.ipynb  paving_examples.py
quickpaver/: __about__.py  __init__.py  _grid.py  _tiling.py  _transfer_matrix.py  _types.py
quickpaver/data/: __init__.py  corsica.geojson  france.geojson
tests/: __init__.py  test_data.py  test_grid.py  test_tiling.py  test_transfer_matrix.py  test_transfer_matrix_rectilinear.py  test_types.py
